--- a/src/StyleSheets/Cards.module.css
+++ b/src/StyleSheets/Cards.module.css
@@ -2,7 +2,7 @@
     justify-self: center;
     width: 90%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     align-items: center;
     gap: 10px;
 }
