--- a/src/StyleSheets/Nav.module.css
+++ b/src/StyleSheets/Nav.module.css
@@ -15,7 +15,7 @@
   color: #ccdfed;
 }
 .henry {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 0;
   margin: 0;
 }
@@ -23,3 +23,16 @@
   height: 30px;
   width: auto;
 }
+
+@media screen and (max-width: 500px){
+  .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    height: auto;
+  }
+  .logo{
+    margin-top: 5px;
+  }
+}
+
