--- a/src/StyleSheets/SearchBar.module.css
+++ b/src/StyleSheets/SearchBar.module.css
@@ -5,6 +5,7 @@
     display: flex;
     position: relative;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 .input  {
@@ -13,6 +14,7 @@
     font-size: 0.7rem;
     background-color: transparent;
     padding-left: 10px;
+    border: none;
     border-bottom: 1px solid white;
 }
 .input::placeholder{
@@ -42,3 +44,17 @@
 button:active{
     background-color: red;
 }
+
+@media screen and (max-width: 750px){
+    .container{
+        width: 50%;
+    }
+}
+
+
+@media screen and (max-width: 500px){
+    .container{
+        width: 80%;
+    }
+}
+
